fix reponsive overlap

--- a/src/views/LessonPlanDetailPage/style.scss
+++ b/src/views/LessonPlanDetailPage/style.scss
@@ -55,6 +55,13 @@ body {
     }
   }
 
+  @media (min-width: map-get($grid-breakpoints, "lg")) and (max-width: map-get($grid-breakpoints, "lg")+60) {
+    padding-left: 3rem;
+  }
+  @media (min-width: map-get($grid-breakpoints, "md")) and (max-width: map-get($grid-breakpoints, "md")+60) {
+    padding-left: 3rem;
+  }
+
   .Header {
     padding-top: 6rem;
     background: linear-gradient(
@@ -68,12 +75,6 @@ body {
       .container {
         padding: 0;
       }
-    }
-    @media (min-width: map-get($grid-breakpoints, "lg")) and (max-width: map-get($grid-breakpoints, "lg")+50) {
-      padding-left: 2rem;
-    }
-    @media (min-width: map-get($grid-breakpoints, "md")) and (max-width: map-get($grid-breakpoints, "md")+50) {
-      padding-left: 2rem;
     }
 
     p:first-of-type {
